Fix 5px alignment issue of 1,2,3 icons

--- a/assets/sass/pages/_amp-ads.scss
+++ b/assets/sass/pages/_amp-ads.scss
@@ -209,10 +209,6 @@ body.amp-ads {
           max-height: 100px;
           max-width: 140px;
         }
-
-        h4 {
-          padding-right: 10px;
-        }
       }
     }
 
